fix: more styling and contrast fixes

--- a/frappe/public/scss/common/buttons.scss
+++ b/frappe/public/scss/common/buttons.scss
@@ -59,7 +59,7 @@
 }
 
 .btn.btn-secondary {
-	background-color: var(--control-bg);
+	background-color: var(--gray-200);
 	color: var(--text-color);
 	&:hover, &:active {
 		background-color: var(--gray-400);
