--- a/frappe/public/scss/common/form.scss
+++ b/frappe/public/scss/common/form.scss
@@ -1,7 +1,7 @@
 .form-control {
-	border: none;
 	font-size: var(--text-md);
 	position: relative;
+	border: 1px solid var(--control-border);
 }
 
 .form-control.bold {
