--- a/frappe/public/scss/desk/list.scss
+++ b/frappe/public/scss/desk/list.scss
@@ -172,6 +172,7 @@
 .list-row-head {
 	@extend .list-row;
 	cursor: default;
+	background-color: var(--gray-50);
 
 	.list-subject {
 		font-weight: normal;
